framec_tests/language_specific/python/v3_facade_smoke/negative/strict_invalid_native.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1, "x")
                x =   # malformed native statement for strict facade
            }
        }
        $B {
        }
}

